Fix: Uploading projects Change: Implement RemoteOpenslide.logout() to clear all variables Feature: Add dialog to show that slide is loading  - Has lots of bugs because UI can be only changed from main thread